[tool.poetry]
name = "crypto-prices"
version = "0.1.0"
description = ""
authors = ["Ota Vlna <otavlna@protonmail.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
